--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
-		"drizzle-orm": "^0.40.0"
+		"dotenv": "^17.2.0",
+		"drizzle-orm": "^0.40.0",
+		"marked": "^16.0.0",
+		"openai": "^5.9.0"
 	}
 }
