--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ff3333",
-        "activityBar.background": "#ff3333",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#00df00",
+        "activityBar.activeBackground": "#d9d9d9",
+        "activityBar.background": "#d9d9d9",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#cf70cf",
         "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "sash.hoverBorder": "#ff3333",
-        "statusBar.background": "#ff0000",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#ff3333",
-        "statusBarItem.remoteBackground": "#ff0000",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#ff0000",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#ff000099",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "commandCenter.border": "#15202b99",
+        "sash.hoverBorder": "#d9d9d9",
+        "statusBar.background": "#c0c0c0",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#a6a6a6",
+        "statusBarItem.remoteBackground": "#c0c0c0",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#c0c0c0",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#c0c0c099",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#FF0000"
+    "peacock.color": "#C0C0C0"
 }
