SvelteKit Final Project

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.3",
 		"daisyui": "^5.0.46",
@@ -53,6 +54,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"bcryptjs": "^3.0.2",
 		"dotenv": "^17.2.0",
 		"drizzle-orm": "^0.40.0",
 		"lucide-svelte": "^0.539.0",
