--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@supabase/supabase-js": "^2.56.0",
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^17.2.0",
 		"drizzle-orm": "^0.40.0",
